02. Api project setup, ASP.NET COre Identity added

--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -4,5 +4,17 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=MYNEO16\\SQLEXPRESS;Database=IdentityApp;Trusted_connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
+  },
+
+  "JWT": {
+    "Key": "ZsIuZ64X0vbDVDfowi6piFOayrDHQpGO",
+    "ExpiresInDays": 15,
+    //"ExpiresInMinutes": 120,
+    //"RefreshTokenExpiresInDays": 15,
+    "Issuer": "http://localhost:5096",
+    //"ClientUrl": "https://localhost:4200"
   }
 }
